# native-aot-test

./: README.md
ConsoleApp1/: ConsoleApp1.csproj  Program.cs
_library/: CMakeLists.txt  build.sh  main.c  nuget.config
_library/ConsoleApp1/: ConsoleApp1.sln
