cmake_minimum_required(VERSION 3.16)

project(_library C)
set(CMAKE_C_STANDARD 11)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

add_library(_library STATIC ${SOURCE_FILES} main.c)
set_target_properties(_library PROPERTIES LINKER_LANGUAGE C)